Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [] \n",
+    "citi_index = [x for x in range(0, len(cities))]\n",
+    "names_and_ranks = []\n",
+    "for i in range(0, 12):\n",
+    "  names_and_ranks.append('{} {}'.format(citi_index[i], city_names[i]) )\n",
+    "print(names_and_ranks[3])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
