Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 Marakesh\n"
+     ]
+    }
+   ],
    "source": [
     "citi_index = [x for x in range(0, len(cities))]\n",
     "names_and_ranks = []\n",
