--- a/index.ipynb
+++ b/index.ipynb
@@ -254,22 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0. Buenos Aires'"
+       "'2. Toronto'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0]"
+    "names_and_ranks[-1]"
    ]
   },
   {
