--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -225,14 +225,14 @@
     "citi_index = [x for x in range(0, len(cities))]\n",
     "names_and_ranks = []\n",
     "for i in range(0, 11):\n",
-    "  names_and_ranks.append('{}. {}'.format(citi_index[i+1], city_names[i]) )\n",
+    "  names_and_ranks.append('{}. {}'.format(citi_index[i]+1, city_names[i]) )\n",
     "print(names_and_ranks[3])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "'11. Solta'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "'11. Solta'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
