--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
    "source": [
     "citi_index = [x for x in range(0, len(cities))]\n",
     "names_and_ranks = []\n",
-    "for i in range(0, 11):\n",
+    "for i in range(0, 12):\n",
     "  names_and_ranks.append('{}. {}'.format(citi_index[i]+1, city_names[i]) )\n",
     "print(names_and_ranks[3])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
@@ -232,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11. Solta'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
