Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,22 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11. Solta'"
+       "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[-1]"
+    "names_and_ranks[0]"
    ]
   },
   {
