--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in cities[]"
+    "for i in cities['populations']"
    ]
   },
   {
