Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in cities['populations']"
+    "for i in cities[0:12]:\n",
+    "    city_popula"
    ]
   },
   {
