--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "source": [
     "city_populations = []\n",
     "for i in cities[0:12]:\n",
-    "    city_popula"
+    "    city_populations.append()"
    ]
   },
   {
