--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for i in cities[0:12]:\n",
+    "for i in r:\n",
     "    city_populations.append(cities[i]['Population'])"
    ]
   },
