Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []\n"
+    "city_areas = []\n",
+    "for i in range(0, 12):\n",
+    "    city_areas = "
    ]
   },
   {
