--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    "source": [
     "city_areas = []\n",
     "for i in range(0, 12):\n",
-    "    city_areas = "
+    "    city_areas.append(cities[][''])"
    ]
   },
   {
